--- a/pages/generatepass.css
+++ b/pages/generatepass.css
@@ -1,7 +1,50 @@
-body{
+body {
     background: #f9fbfd;
 }
 
-.intro-div{
+.intro-div {
     margin-top: 5%;
+}
+
+.passwordArea {
+    height: 10%;
+    padding: 2%;
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+    box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+}
+
+
+.passwordArea input  {
+    border: none;
+    outline: 0!important;
+    height: 60px;
+    font-size: 2.2em;
+    color: rgb(8, 13, 44);
+    font-weight: bold;
+}
+.passwordArea input:focus{
+    border:none;
+    box-shadow: none;
+   -webkit-box-shadow: none;
+   -moz-box-shadow: none;
+   -moz-transition: none;
+   -webkit-transition: none;
+}
+
+.btn {
+    border:none;
+    box-shadow: none;
+   -webkit-box-shadow: none;
+   -moz-box-shadow: none;
+   -moz-transition: none;
+   -webkit-transition: none;  
+}
+.ControlArea {
+    margin-top: 5%;
+    height: 10%;
+    padding: 6%;
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+    box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
 }
