--- a/main.css
+++ b/main.css
@@ -1,15 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 body{
     background: #457fca;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #5691c8, #457fca); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+font-family: 'Lato', sans-serif;
 }
 .intro {
     background: transparent;
-   
-  
-
-    
+        
 }
 .intro p{
     color: white;
