--- a/pages/generatepass.css
+++ b/pages/generatepass.css
@@ -5,13 +5,21 @@ body {
 }
 
 .intro-div {
-    margin-top: 5%;
+     /* margin-top: 5%; */
+     background: #180d5b;
+   
+}
+
+
+.wrapper-text{
+padding-top: 20%;
 }
 
 .passwordArea {
     height: 10%;
+    margin-top: 1%;
     padding: 2%;
-
+    border-top: 1px solid #eee;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
     box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
@@ -44,10 +52,10 @@ body {
    -webkit-transition: none;  
 }
 .ControlArea {
-    margin-top: 5%;
+    margin-top: 1%;
     border: 1px solid #eee;
     height: 10%;
-    padding: 6%;
+    padding: 2% 3%;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
     box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
@@ -69,5 +77,5 @@ body {
 } 
 
 footer{
-    margin-top: 2%;
+ margin-top: 1%;
 }
