--- a/pages/generateusername.css
+++ b/pages/generateusername.css
@@ -3,11 +3,20 @@ body {
     background: #f9fbfd;
     font-family: 'Lato', sans-serif;
 }
-.step-1-area{
+.step-1-area
+{
   height: 10%;
   padding: 2%;
-  margin-top: 10%;
-  -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+  margin-top: 2%;
+   -webkit-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
   -moz-box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
   box-shadow: 4px 4px 5px 0px rgba(219,219,219,1);
+}
+
+.intro-div {
+  background: #16cccd;
+}
+
+.wrapper-text{
+  padding-top: 20%;
 }
